add session env + server

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGO_URI=mongodb+srv://ngongocthang18082004:ngongocthang18082004@cluster0.5hduu
 CLOUDINARY_CLOUD_NAME=dysul4xbz
 CLOUDINARY_API_KEY=623629927236568
 CLOUDINARY_API_SECRET=jQ95WsNA7aqc_dbBqdyfoM_GU9s
+SESSION_SECRET=pksk2024
