--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "faker": "^6.6.6",
     "joi": "^17.13.3",
     "mongoose": "^8.7.2",
