profile-patient + user-appointment

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ CLOUDINARY_CLOUD_NAME=dysul4xbz
 CLOUDINARY_API_KEY=623629927236568
 CLOUDINARY_API_SECRET=jQ95WsNA7aqc_dbBqdyfoM_GU9s
 SESSION_SECRET=pksk2024
+PASSWORD_MAILER=18082004@Thang
