--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "joi": "^17.13.3",
     "mongoose": "^8.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
   }
 }
