--- a/backend/.env
+++ b/backend/.env
@@ -6,6 +6,7 @@ CLOUDINARY_API_KEY=623629927236568
 CLOUDINARY_API_SECRET=jQ95WsNA7aqc_dbBqdyfoM_GU9s
 
 SESSION_SECRET=pksk2024
+JWT_SECRET=ngongocthang18082004
 
 EMAIL_USER=ngongocthang18082004@gmail.com
 EMAIL_PASS=djvqcgxymcdhlcxh
